--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -71,9 +71,9 @@ body {
 }
 
 .dishes-card {
-    min-height: 490px;
-    max-height: 490px;
-    border: 1px solid gray;
+    min-height: 400px;
+    max-height: 400px;
+    border: 1px solid #f5c344;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 
@@ -133,13 +133,15 @@ body {
         }
     }
 
-    .description {
-        width: 250px;
-        height: 50px;
-        white-space: wrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+    // .description {
+    //     width: 200px;
+    //     height: 50px;
+    //     white-space: wrap;
+    //     overflow: hidden;
+    //     text-overflow: ellipsis;
+    //     color: white;
+    //     font-size: 0.5rem;
+    // }
 
 
 
@@ -150,4 +152,24 @@ body {
 
 .c-gray {
     color: white;
+}
+
+.dish-btn-container {
+
+    .edit-btn,
+    .delete-btn {
+        width: 45%;
+        border: 1px solid #f5c344;
+        color: #f5c344;
+        transition: all 0.3s ease;
+    }
+
+    .edit-btn:hover,
+    .delete-btn:hover {
+        color: white;
+        background-color: #f5c344;
+    }
+
+
+
 }
