--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -70,6 +70,11 @@ body {
     }
 }
 
+.dish-card-container {
+    max-height: 896px;
+    overflow-y: scroll;
+}
+
 .dishes-card {
     min-height: 400px;
     max-height: 400px;
