--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -31,8 +31,9 @@ body {
 }
 
 .bg_footer {
-    background: rgb(148, 218, 251);
-    background: linear-gradient(0deg, rgba(148, 218, 251, 1) 0%, rgba(28, 48, 93, 1) 100%);
+
+    background: rgb(245, 195, 68);
+    background: linear-gradient(0deg, rgba(245, 195, 68, 0.9) 0%, rgba(28, 48, 93, 0.8) 38%, rgba(28, 48, 93, 1) 77%);
 }
 
 .text_blue_primary {
