Refactor form layout and styles
Consolidate form layout, align labels and inputs, and apply consistent font-family styles to enhance form consistency and user experience. Introduce dynamic image preview functionality for the cover image. Improve form submission button styling for visibility.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -206,3 +206,12 @@ body {
 .lightgray {
     color: lightgray;
 }
+
+label,
+input,
+select,
+textarea {
+
+    font-family: "Open Sans", sans-serif;
+
+}
