Fixed quantity attachment in dish-order

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -76,6 +76,10 @@ body {
             transform: scale(1.05);
         }
     }
+
+    .dropdown-menu {
+        background-color: rgba(245, 195, 68);
+    }
 }
 
 // WELCOME.BLADE
